unpackaged/main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXC-{0000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>