unpackaged/main/default/objects/ExceptionLog__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>