unpackaged/main/default/objects/ExceptionLog__c/fields/ExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCode__c</fullName>
    <label>Exception Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>