unpackaged/main/default/objects/ExceptionLog__c/fields/ReasonforDecision__c.field-meta.xml
<CustomField>
    <fullName>ReasonforDecision__c</fullName>
    <label>Reason for Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>